Added issues div

--- a/index.html
+++ b/index.html
@@ -66,8 +66,11 @@
           </div>
           <div class="row p-2" style="height: 80vh">
             <div class="col-9 mx-2 bg-white border-top border-danger py-3">
+              <!-- ISSUES START -->
+              <div class="bg-white rounded px-2">ISSUES</div>
+              <!-- ISSUES END -->
               <!-- MENU START -->
-              <div class="col bg-white rounded px-2">
+              <div class="bg-white rounded px-2">
                 <ul class="nav nav-pills fs-8">
                   <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="#"
@@ -116,6 +119,7 @@
                 </ul>
               </div>
               <!-- MENU END -->
+              <!-- CONTENT START -->
               <div class="form-floating mt-3 mx-2">
                 <textarea
                   class="form-control"
@@ -132,6 +136,7 @@
                   multiple
                 />
               </div>
+              <!-- CONTENT START -->
             </div>
             <div class="col mx-2 bg-white border-top border-success py-3">
               <div class="border-bottom border-warning py-2">
